--- a/report.tex
+++ b/report.tex
@@ -68,8 +68,16 @@
     
     %%　摘要
     \input{summary}
-   
-    
+    %% 环境
+    \input{Environment}
+    %% SA
+    \input{SA}
+    %% UML
+    \input{UML}
+    %% 验证
+    \input{verification}
+    %% 修复
+    \input{fix}
     
 \end{document}
 
