--- a/report.tex
+++ b/report.tex
@@ -8,7 +8,7 @@
 %%       <pari passu>
 %%       李约瀚 (John Lee) (Qinka) <qinka@live.com> <me@qinka.pro>
 %%       康赣鹏
-%%       乔新闻
+%%       乔新文
 %%       罗赛男
 %%       杨瑞
 %%
@@ -55,7 +55,7 @@
 %% 作者
 \author{李约瀚 \\ 14130140331 \\ qinka@live.com \\ me@qinka.pro %
    \and 康赣鹏 \\ 14130140xxx \\ email@domain%
-   \and 乔新闻 \\ 14130140xxx \\ email@domain%
+   \and 乔新文 \\ 141301400393 \\ starsriver@outlook.com %
    \and 罗赛男 \\ 14130140xxx \\ email@domain%
    \and  杨瑞  \\ 14130140xxx \\ email@domain%
    % 格式 姓名 【换行】 学号 【换行】 邮箱 【换行】 邮箱 （可以只有一个。。。
